--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.7",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "apisauce": "^2.0.1",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-blur": "~8.2.2",
     "expo-image-picker": "~9.2.0",
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
+    "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.1.4",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.29.1",
     "react": "16.13.1",
@@ -33,8 +37,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
-    "yup": "^0.32.8",
-    "@react-native-community/netinfo": "5.9.7"
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
